# ticket_service_backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example  setup.sh
.sqlx/: query-236092251817d317b6a2e8611a59ddfe7202d72cff23babf89a7cd1c39c72a64.json  query-2474e49f685875a60c3e49d2224fa15483c05e78c5531dab8933465c389587cf.json  query-2fd8c5a7d78eae66c7f564b78ad4f64a6dcb8f65ae0af18b663da9e18895ce35.json  query-31bbc4d3b7ba37e7ec0d30f2bfa79f7c8901a87c7c93bc6ce6f3b8ec9a73388d.json  query-32d15a914ccfc50b7b0f9ab75094207be605b46489587d34e40dd3e6cfeebc1e.json  query-357a9e75189930ab83998b01f0c6d94438a8f57e86fc38a1fc2a45551b12fc79.json  query-3ee3d7433863b63c0ae5b83bb5d42ecee4f5bdf7eecd7880a60086208144c7eb.json  query-4bcdd31680801d3f3e043304502316aae89e58b1d2277ddeb33edddfcb709b03.json  query-50dda886f1d3802d70d89571b45b4c9813dd027506fd99acb4f1205b05016ed2.json  query-671d602cd5d2bf137c5a21768dc560bdceb532681de8422dab4101267898cd86.json  query-6f6e2e590a2504442a85f7f8a70716ada7c9b03222d512b5a3240efc48617df9.json  query-7485bab2c77615e0bf4ba26a8b8bbcdf1e9debd6dac48866575c5a2c3898b2c5.json  query-79d6ec6e0c3275438cf735d6637075398cb2e188b4d55df37eff9d7cabc4dd5f.json  query-7c2b9a4280efd4fcb894481de5ae65253c2fbd6c48f53c41f61cbfb4a79cd953.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-879151adecc7593aa3fa6a4bf2da27f13b3e5bc2623f45312076112809735bce.json  query-91eb7c53f181f130535a0ce0c4fae2c1c22ecacf9e670dbf4a1d9b07dce06b7e.json  query-96464027fd5389424f98cb484f6a2e9f1c3fd8d93e001dde5df42ee6b4c4aee6.json  (+14 more)
(+2 files in other folders)
